# ProjetFinal-package

./: .gitignore  LICENSE.md  MGA802 Projet final.pptx  Projetpython.docx  README.md  setup.cfg
ProjetFinal/: __init__.py  aerodynamics.py  airfoildataframe.py  airfoils.csv  atmosphere.py  handler.py  mainframe.py  plot.py
ProjetFinal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
source/: ProjetFinal.rst  conf.py  modules.rst
