[metadata]
name = ProjetFinal
version = 0.1
author = Vahram Nersisyan
description = Project calculates stall speed, takeoff speed, optimal speed, takeoff distance and landing distance.
long_description = The program reads the csv file with wing profil data. The user select the profil. The user enters weight, wing surface, wingspan, jet thrust and altitude. 
url = 
keywords = stall speed, takeoff speed, optimal speed, takeoff distance, landing distance.

[options]
python_requires = >=3.10
install_requires =
    numpy
	pandas
	pandastable
	matplotlib
	